<resources>
    <string name="app_name">scroll view try1</string>
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="place">Place</string>
    <string name="email_id">Email Id</string>
    <string name="dob">DOB</string>
    <string name="constraint_layout_in_scrollview">Constraint Layout In ScrollView</string>
    <string name="sexe">Name</string>
    <string name="nam">Name</string>
    <string name="n">Name</string>
    <string name="na">Name</string>
    <string name="namee">Name</string>
    <string name="nbj">Name</string>
    <string name="sv">Name</string>
    <string name="title_activity_faza">faza</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>