<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="396dp"
            android:layout_height="530dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="613dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/a1" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    app:srcCompat="@drawable/a2" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    app:srcCompat="@drawable/a3" />

            </LinearLayout>
        </HorizontalScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity"
            android:background="#FAE6CA">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/constraint_layout_in_scrollview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- EditText 1 -->
            <EditText
                android:id="@+id/editTextText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

            <!-- EditText 2 -->
            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/place"
                app:layout_constraintEnd_toEndOf="@+id/editTextText"
                app:layout_constraintStart_toStartOf="@+id/editTextText"
                app:layout_constraintTop_toBottomOf="@+id/editTextText"
                tools:ignore="LabelFor" />

            <!-- EditText 3 -->
            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/email_id"
                app:layout_constraintEnd_toEndOf="@+id/editTextText2"
                app:layout_constraintStart_toStartOf="@+id/editTextText2"
                app:layout_constraintTop_toBottomOf="@+id/editTextText2"
                tools:ignore="LabelFor" />

            <!-- EditText 4 -->
            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/dob"
                app:layout_constraintEnd_toEndOf="@+id/editTextText3"
                app:layout_constraintStart_toStartOf="@+id/editTextText3"
                app:layout_constraintTop_toBottomOf="@+id/editTextText3"
                tools:ignore="LabelFor" />

            <!-- EditText 5 -->
            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/sexe"
                app:layout_constraintEnd_toEndOf="@+id/editTextText4"
                app:layout_constraintStart_toStartOf="@+id/editTextText4"
                app:layout_constraintTop_toBottomOf="@+id/editTextText4"
                tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

            <!-- EditText 6 -->
            <EditText
                android:id="@+id/editTextText6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/nam"
                app:layout_constraintEnd_toEndOf="@+id/editTextText5"
                app:layout_constraintStart_toStartOf="@+id/editTextText5"
                app:layout_constraintTop_toBottomOf="@+id/editTextText5"
                tools:ignore="LabelFor" />

            <!-- EditText 7 -->
            <EditText
                android:id="@+id/editTextText7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/namee"
                app:layout_constraintEnd_toEndOf="@+id/editTextText6"
                app:layout_constraintStart_toStartOf="@+id/editTextText6"
                app:layout_constraintTop_toBottomOf="@+id/editTextText6"
                tools:ignore="LabelFor" />

            <!-- EditText 8 -->
            <EditText
                android:id="@+id/editTextText8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/n"
                app:layout_constraintEnd_toEndOf="@+id/editTextText7"
                app:layout_constraintStart_toStartOf="@+id/editTextText7"
                app:layout_constraintTop_toBottomOf="@+id/editTextText7"
                tools:ignore="LabelFor" />

            <!-- EditText 9 -->
            <EditText
                android:id="@+id/editTextText9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/na"
                app:layout_constraintEnd_toEndOf="@+id/editTextText8"
                app:layout_constraintStart_toStartOf="@+id/editTextText8"
                app:layout_constraintTop_toBottomOf="@+id/editTextText8"
                tools:ignore="LabelFor" />

            <!-- Button -->

            <!-- EditText 10 -->
            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="164dp"
                android:text="@string/button"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/editTextText9"
                app:layout_constraintStart_toStartOf="@+id/editTextText9"
                app:layout_constraintTop_toBottomOf="@+id/editTextText9" />

            <EditText
                android:id="@+id/editTextText10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:text="@string/nbj"
                app:layout_constraintEnd_toEndOf="@+id/editTextText9"
                app:layout_constraintStart_toStartOf="@+id/editTextText9"
                app:layout_constraintTop_toBottomOf="@+id/button"
                tools:ignore="LabelFor" />

            <!-- EditText 11 -->
            <EditText
                android:id="@+id/editTextText11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:text="@string/sv"
                app:layout_constraintEnd_toEndOf="@+id/editTextText9"
                app:layout_constraintStart_toStartOf="@+id/editTextText9"
                app:layout_constraintTop_toBottomOf="@+id/editTextText10"
                tools:ignore="LabelFor" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>